--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-jekyll": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-notify": "~0.2.16"
+    "grunt-notify": "~0.2.16",
+    "grunt-svg2png": "~0.2.1",
+    "grunt-contrib-imagemin": "~0.3.0",
+    "grunt-fontsmith": "~0.3.0"
   }
 }
