--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ pygments: true
 paginate: 1
 
 url: http://informatiearchitectuur.github.io
+# url: http://informatiearchitectuur.dev/_site/
 
 exclude: ['_site', 'scss','*scss','Gem*','Guard*','*rb','.sass-cache','.git*','config.rb','*.md','*.json']
 
