--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate: 1
 
 url: http://informatiearchitectuur.be
 # url: http://informatiearchitectuur.github.io
-# url: http://informatiearchitectuur.dev/_site/
+# url: http://informatiearchitectuur.dev/_site
 
 exclude: ['_site', 'scss','*scss','Gem*','Guard*','*rb','.sass-cache','.git*','config.rb','*.md','*.json']
 
